# sandbox

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.toml
.zcode/plans/: plan-sess_bb8166be-7711-4f3d-9687-88f158a99ebc.md
docs/: ARCHITECTURE.md  FEATURES.md  MATERIAL-SYSTEMS.md  MATERIALS.md  OBJECTS.md  PERFORMANCE.md  PHYSICS.md  PROPOSALS.md  PWA.md  README.md  WASM-ENGINE-PORTING.md
public/: manifest.webmanifest  sw.js
scripts/: check-material-ids.mjs  generate-icons.mjs
src/components/: BlendBrush.svelte  ControlPanel.svelte  HeatCoolSettings.svelte  InspectPanel.svelte  MaterialPalette.svelte  MaterialPicker.svelte  Modal.svelte  SaveSlots.svelte
src/game/: Game.ts  config.ts  layout.ts  tint.ts
src/game/engine/: Grid.ts  SimContext.ts  Simulation.ts  behaviors.ts  benchScenarios.ts  brushTools.ts  directions.ts  dirtyTiles.ts  heat.wasm  heatWasm.ts  objects.ts  profiler.ts  reactions.ts  types.ts
src/game/input/: PointerPainter.ts  SandboxMover.ts  SandboxResizer.ts  floatingOverlay.ts
src/game/materials/: acid.ts  acidslime.ts  acidvapor.ts  aerogel.ts  alcohol.ts  amber.ts  ammoniumnitrate.ts  antimatter.ts  ash.ts  asphalt.ts  battery.ts  (+120 more)
src/layouts/: Base.astro
src/pages/: 404.astro  index.astro
src/state/: persistence.ts  snapshots.ts  store.ts
src/styles/: global.css
test/: active-tiles.ts  run-active-tiles.mjs
wasm/: README.md  build.sh
wasm/bench/: heat-bench.mjs
wasm/heat/: Cargo.toml
wasm/heat/src/: lib.rs
wasm/test/: golden.mjs  integration.mjs
(+20 files in other folders)
